<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Heads</string>
    <string name="title_activity_login">Heads</string>
    <string name="services_url">http://pc51.atc.gr/heads</string>
    <string name="imageSelectorCamera">Capture from camera</string>
    <string name="imageSelectorSD">Select from storage</string>
    <string name="account">Account</string>
    <string name="options">Options</string>
    <string name="upload">Upload</string>
    <string name="search">Search</string>
    <string name="mine">My Points</string>
    <string name="settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="refresh">Refresh</string>
    <string name="logout">Logout</string>
    <string name="userName">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="registerLinkMessasge">Need an account? Register Here!</string>
    <string name="loginLinkMessasge">Already have an account? Login Here!</string>
    <string name="search_storage">Storage</string>
    <string name="search_when">When</string>
    <string name="search_range">Range</string>
    <string name="description">Description</string>
    <string name="description_hint">Type a short description of the point</string>
    <string name="search_tags">Tags</string>
    <string name="search_tags_hint">Select one or more tags</string>
    <string name="search_where">Where</string>
    <string name="search_current_location">Current location</string>
    <string name="search_libraries">Library</string>
    <string name="error_image_get">Failed to get image</string>
    <string name="dialog_gps_message">You must activate the GPS unit</string>
    <string name="dialog_gps_activate">Activate</string>
    <string name="dialog_gps_cancel">Cancel</string>
    <string name="showlist">List</string>
    <string name="showmap">Map</string>
    <string name="empty_list">No images found</string>
    <string name="select_time">Select time</string>
    <string name="select_date_range">Select date range</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="package_deleted">Point deleted successfully</string>
    <string name="delete_item">Delete point?</string>
    <string name="delete_warning_message">Are you sure you want to delete this point?</string>
    <string name="selectlocation">Please select a location</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="select_image">Select image</string>
    <string name="username_not_empty">Username can\'t be empty</string>
    <string name="password_not_empty">Password can\'t be empty</string>
    <string name="passwords_not_match">Passwords do not match</string>
    <string name="title_not_empty">Title can\'t be empty</string>
    <string name="description_not_empty">Description can\'t be empty</string>
    <string name="tags_cant_be_empty">Please select at least one tag!</string>
    <string name="location_cant_be_empty">Location can\'t be empty!</string>
    <string name="image_cant_be_empty">Tap on the image placeholder to select an image!</string>

    <string-array name="navigation_array">
        <item>Upload</item>
        <item>Search</item>
        <item>My Points</item>
        <item>Account</item>
    </string-array>
    <string-array name="search_when_options">
        <item>Anytime</item>
        <item>1 Week</item>
        <item>1 Month</item>
        <item>1 Year</item>
        <item>Range</item>
    </string-array>
    <string-array name="search_range_options">
        <item>1Km</item>
        <item>2Km</item>
        <item>5Km</item>
        <item>10Km</item>
        <item>100Km</item>
    </string-array>
    <string-array name="tag_sample">
        <item>Park</item>
        <item>Street</item>
        <item>Bar</item>
    </string-array>

    <string name="select_image_source">Select Image Source</string>
    <string name="waiting">Please wait</string>
    <string name="failed">Failed</string>
    <string name="cancel">Cancel</string>
    <string name="OK">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="canceled">Canceled</string>
    <string name="multiplerecords">Multiple records</string>
    <string name="loginsuccess">Signed in successfully</string>
    <string name="welcome">Hi </string>
    <string name="cannotbeempty">Can not be empty</string>
    <string name="notags">No tags available</string>
    <string name="nolocationselected">No location selected, abording upload</string>
    <string name="title">Title</string>
    <string name="imagetitle">Image Title</string>
    <string name="servicesaredown">Heads service is temporarily unavailable</string>
    <string name="note">Note</string>
    <string name="nointernet">This application requires an internet connection. Please provide an internet access in order to proceed.</string>
    <string name="nodescription">No description available</string>
    <string name="notitle">No title</string>
    <string name="login_failed">Login failed</string>
    <string name="title_activity_results">Results</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="map_help_text">Drag the map to select a new location. Press OK to confirm.</string>
    <string name="network_warning">Network connectivity isn\'t available. You can\'t use this operation, until your device is connected to the Internet.</string>
    <string name="network_upload_warning">Network isn\'t available. The image will be stored locally.</string>
    <string name="crash_toast_text">Heads application has crashed. A report has been sent to the developers team to help them find a solution.</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_location_select">Select Location</string>
    <string name="title_activity_tag_select">Select Tags</string>
    <string name="title_activity_details">Details</string>

    <string name="delailsViewVisible">false</string>

</resources>
