<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_alignParentTop="true"
        android:id="@+id/username_line"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:textColor="#372c24"
            android:textStyle="bold"
            android:text="@string/userName"
            android:textSize="@dimen/text_size_medium"/>
        <TextView android:id="@+id/username_text"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:textColor="#372c24"
            android:text="@string/userName"
            android:textSize="@dimen/text_size_medium"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/email_line"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_below="@id/username_line">
        <TextView android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:textColor="#372c24"
            android:textStyle="bold"
            android:text="@string/email"
            android:textSize="@dimen/text_size_medium"/>
        <TextView android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="#372c24"
            android:text="@string/userName"
            android:textSize="@dimen/text_size_medium"/>
    </LinearLayout>
    <Button android:id="@+id/button_logout"
        android:layout_below="@id/email_line"
        android:layout_centerHorizontal="true"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/logout"
        style="@style/btnStyleOrange"
        />

</RelativeLayout>
